# Generative-AI-Homework

./: .gitignore
HW3_Build_own_application_with_api/: main.ipynb  pyproject.toml
